# sc-testing-tools-skill-test

./: .gitignore  .skill-state.md  README.md  auction.cabal  cabal.project  contract-sketch.md  escrow.cabal  flake.nix  model-decisions.md  pingpong.cabal  vesting.cabal
.claude/skills/testing-interface/: SKILL.md
.claude/skills/testing-interface/references/: 00-phase-detection.md  02-project-setup.md  06-threat-models.md
lib/: Scripts.hs
lib/Auction/: Scripts.hs  Utils.hs
lib/Escrow/: Scripts.hs
lib/Scripts/: PingPong.hs
lib/Vesting/: Scripts.hs
nix/: outputs.nix  project.nix  shell.nix
test/: AuctionSpec.hs  EscrowSpec.hs  PingPongSpec.hs  Spec.hs  VestingSpec.hs
