cabal-version: 3.0
name:          escrow
version:       0.1.0.0
synopsis:      Minimal Escrow showcase
license:       Apache-2.0
build-type:    Simple

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules:
    Escrow.Scripts
    Escrow.Validator

  -- Plutus options for the on-chain module live as per-module pragmas inside the .hs files
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise -fplugin-opt
    PlutusTx.Plugin:target-version=1.1.0.0 -fplugin-opt
    PlutusTx.Plugin:defer-errors

  build-depends:
    , base               >=4.14.0
    , cardano-api
    , convex-base
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
